src/test/ui/asm/inline-syntax.x86_64.stderr
error: intel syntax is the default syntax on this target, and trying to use this directive may cause issues
  --> $DIR/inline-syntax.rs:19:15
   |
LL |         asm!(".intel_syntax noprefix", "nop");
   |               ^^^^^^^^^^^^^^^^^^^^^^ help: remove this assembler directive

error: intel syntax is the default syntax on this target, and trying to use this directive may cause issues
  --> $DIR/inline-syntax.rs:21:15
   |
LL |         asm!(".intel_syntax aaa noprefix", "nop");
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this assembler directive

error: using the .att_syntax directive may cause issues, use the att_syntax option instead
  --> $DIR/inline-syntax.rs:23:15
   |
LL |         asm!(".att_syntax noprefix", "nop");
   |               ^^^^^^^^^^^^^^^^^^^^
   |
help: remove the assembler directive and replace it with options(att_syntax)
   |
LL |         asm!("", "nop", options(att_syntax));
   |              --       ^^^^^^^^^^^^^^^^^^^^^

error: using the .att_syntax directive may cause issues, use the att_syntax option instead
  --> $DIR/inline-syntax.rs:26:15
   |
LL |         asm!(".att_syntax bbb noprefix", "nop");
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: remove the assembler directive and replace it with options(att_syntax)
   |
LL |         asm!("", "nop", options(att_syntax));
   |              --       ^^^^^^^^^^^^^^^^^^^^^

error: intel syntax is the default syntax on this target, and trying to use this directive may cause issues
  --> $DIR/inline-syntax.rs:29:15
   |
LL |         asm!(".intel_syntax noprefix; nop");
   |               ^^^^^^^^^^^^^^^^^^^^^^ help: remove this assembler directive

error: intel syntax is the default syntax on this target, and trying to use this directive may cause issues
  --> $DIR/inline-syntax.rs:34:14
   |
LL |               .intel_syntax noprefix
   |  ______________^
LL | |             nop"
   | |_ help: remove this assembler directive

error: aborting due to 6 previous errors

